--- a/image-files/etc/serval/serval.conf
+++ b/image-files/etc/serval/serval.conf
@@ -1,22 +1,16 @@
-interfaces.1.encapsulation=single
-interfaces.1.file=/dev/ttyATH0
-interfaces.1.socket_type=stream
-interfaces.1.type=catear
-interfaces.1.uartbps=115200
-interfaces.2.match=eth0
-interfaces.2.type=ethernet
-interfaces.3.match=wlan0
+interfaces.1.match=eth0
+interfaces.1.type=ethernet
+interfaces.2.match=wlan0
+interfaces.2.prefer_unicast=on
+interfaces.2.type=wifi
+interfaces.3.match=adhoc0
 interfaces.3.prefer_unicast=on
 interfaces.3.type=wifi
-interfaces.4.match=wlan0-1
-interfaces.4.prefer_unicast=on
-interfaces.4.type=wifi
 log.console.level=debug
 log.console.show_time=on
 log.file.directory_path=/serval-var/log
 log.file.level=fatal
-mdp.iftype.wifi.packet_interval=1000
 rhizome.datastore_path=/serval-var/rhizome
 rhizome.idle_timeout=30000
 rhizome.rhizome_mdp_block_size=100
-
+api.restful.users.lbard.password=lbard
